--- a/GOW/Base.lproj/Main.storyboard
+++ b/GOW/Base.lproj/Main.storyboard
@@ -89,10 +89,6 @@
                             <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YGs-fa-WA0">
                                 <rect key="frame" x="0.0" y="103" width="393" height="715"/>
                                 <gestureRecognizers/>
-                                <connections>
-                                    <outletCollection property="gestureRecognizers" destination="RdX-rT-qZE" appends="YES" id="W3I-a9-Y7k"/>
-                                    <outletCollection property="gestureRecognizers" destination="peg-4u-WNH" appends="YES" id="JqC-P5-PhH"/>
-                                </connections>
                             </imageView>
                             <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="Fpl-Pj-7R4">
                                 <rect key="frame" x="160" y="752" width="73" height="26"/>
@@ -113,20 +109,11 @@
                     <connections>
                         <outlet property="gameImage" destination="YGs-fa-WA0" id="nLQ-mT-hke"/>
                         <outlet property="imagePageControl" destination="Fpl-Pj-7R4" id="CGV-Mv-MCA"/>
-                        <outlet property="rigthSwipeDone" destination="RdX-rT-qZE" id="ZUs-CI-TOo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8eW-bw-N6n" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <swipeGestureRecognizer direction="right" id="RdX-rT-qZE">
-                    <connections>
-                        <action selector="rigthSwipeDoneAction:" destination="bVt-am-Dih" id="icy-30-NMp"/>
-                    </connections>
-                </swipeGestureRecognizer>
-                <swipeGestureRecognizer direction="left" id="peg-4u-WNH">
-                    <connections>
-                        <action selector="leftSwipeDoneAction:" destination="bVt-am-Dih" id="z6p-gu-X9o"/>
-                    </connections>
-                </swipeGestureRecognizer>
+                <swipeGestureRecognizer direction="right" id="RdX-rT-qZE"/>
+                <swipeGestureRecognizer direction="left" id="peg-4u-WNH"/>
             </objects>
             <point key="canvasLocation" x="1831" y="-335"/>
         </scene>
